--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "axios": "^0.16.2",
     "echarts": "^3.8.5",
+    "el-tree-transfer": "^2.2.0",
     "element-ui": "^2.4.1",
     "lodash": "^4.17.4",
     "vue": "^2.5.9",
     "vue-fullcalendar": "^1.0.9",
+    "vue-print-nb": "^1.0.3",
     "vue-router": "^2.8.1",
     "vue-template-compiler": "^2.5.9",
     "vue2-editor": "^2.4.2"
