--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "echarts": "^3.8.5",
     "el-tree-transfer": "^2.2.0",
     "element-ui": "^2.4.1",
+    "es6-promise": "^4.2.6",
     "lodash": "^4.17.4",
     "vue": "^2.5.9",
     "vue-fullcalendar": "^1.0.9",
@@ -42,8 +45,8 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.1",
     "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.3",
-    "jquery": "^3.3.1",
+    "http-proxy-middleware": "^0.19.1",
+    "jquery": "^3.4.0",
     "node-sass": "^4.5.3",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
@@ -53,6 +56,7 @@
     "sass-loader": "^6.0.6",
     "semver": "^5.4.1",
     "style-loader": "^0.16.1",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "url-loader": "^0.5.9",
     "vue-loader": "^11.1.4",
     "vue-particles": "^1.0.9",
